--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vitejs/plugin-vue": "^3.1.2",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
     "autoprefixer": "^10.4.12",
+    "cypress": "^10.11.0",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
     "vite": "^3.1.8"
