--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,7 @@
 version: 2.1
 
+
+
 orbs:
  cypress: cypress-io/cypress@1
 workflows:
@@ -7,6 +9,8 @@ workflows:
     jobs:
       - cypress/run:
               store_artifacts: true
-      - run:
-          name: Cypress dashboard
-          command: npx cypress run --record --key 0fdf3b68-0707-43ff-a646-dcb5640389da
+      - commands:
+          steps:
+            - run:
+                  name: Cypress dashboard
+                  command: npx cypress run --record --key 0fdf3b68-0707-43ff-a646-dcb5640389da
