--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,10 @@
-version: 2.1
+# version: 2.1
 
-orbs:
- cypress: cypress-io/cypress@1
-workflows:
-  build:
-    jobs:
-      - cypress/run:
-              store_artifacts: true
-              command: npx cypress run --record --key 0fdf3b68-0707-43ff-a646-dcb5640389da
+# orbs:
+#  cypress: cypress-io/cypress@1
+# workflows:
+#   build:
+#     jobs:
+#       - cypress/run:
+#               store_artifacts: true
+#               command: npx cypress run --record --key 0fdf3b68-0707-43ff-a646-dcb5640389da
