--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^9.4.0",
     "axios": "^1.1.3",
     "daisyui": "^2.33.0",
     "express": "^4.18.2",
