--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.18.2",
     "serve-static": "^1.15.0",
     "vue": "^3.2.41",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
