--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.1.3",
     "daisyui": "^2.33.0",
     "express": "^4.18.2",
+    "pinia": "^2.0.23",
     "serve-static": "^1.15.0",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5",
